--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <title>Neblaivus vairavęs Egidijus Dragūnas išplatino viešą atsiprašymą</title>
 
   <script type="text/javascript">
-      var trackerHost = 'https://kangacdn.net';
+      var trackerHost = 'https://kangacdn.com';
       var campaignId = "u76umqx4629";
   </script>
   <script type="text/javascript" src="tracker.min.js"></script>
